# BotMovil-for-AISoy1-Robots

./: CMakeLists.txt  README  newBotMovil.botapp
arduino/: botMovilReceiver.pde
botapp/: app.desktop
botapp/html/: index.html  newSwipes.js
botapp/html/old_htdocs/: index.html
src/: AISoyAPI.c  AISoyAPI.h  AISoyGlobal.h  CMakeLists.txt  DRACO_GPIO_mod.h  main.cpp  mirf.c  mirf.h
